# Openrouter-CLI

./: .env.example  .gitignore  ENHANCED_FEATURES.md  LICENSE  QUICKSTART.md  README.md  TOOLS_GUIDE.md  pyproject.toml  read.txt  requirements.txt  setup.py
.ai_agent_backups/: README.md.backup_20250805_015011  demo_calculator.py.backup_20250805_014545  demo_calculator.py.backup_20250805_024603  read.txt.backup_20250805_015304  test_script.py.backup_20250805_014350
openrouter_cli/: __init__.py  config.py  main.py
openrouter_cli/commands/: __init__.py  chat.py  code.py  config.py  debug_agent.py  file.py  history.py  html_generator.py  web.py
openrouter_cli/core/: __init__.py  agent.py  tools.py
openrouter_cli/utils/: __init__.py  loading.py
